--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	<h4>//@TITLE title</h4>Add this comment and execute (Ctrl+Enter) to set the title of your code editor.
 	<h4>//@WARN message</h4>Add this comment right above your query to show a warning message before execution.
 	<h4>//@FILE filename [comments]</h4>Add this comment right above your query to download the results into a file (like .csv,.xls etc...).
-	<h4>//@TRAP [comments]</h4>Add this comment right above your query to get the stack trace of a (potential) error.
+	<h4>//@TRAP [comments]</h4>Add this comment right above your query to execute with exteded trap, i.e. you will get the stack trace of errors.
 	<h4>//@OUTPUT [name]</h4>Add this comment to set the target output window for queries or urls below the comment. 
 	<h4>//@URL url [comments]</h4>Add this comment and execute (Ctrl+Enter) to open url in the target output window.
 	<h4>//@MAC name definition</h4>Macros provide a non-intrusive way of defining q values (function or data) on the clint side. If the "name" macro is defined in any of the q editors the "!!name" string is replaced with its definition before execution. Macros can be nested. Warnings are shown for duplicate definitions on execution.
