Credits upd, minor start.q change

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 	<h4>Ctrl+Space</h4>
 	Code completion for standard q keywords longer than 3 characters and the .Q namespace.
 	<h4>Ctrl+s</h4>
-	Copies a link to the clipboard that encodes the code editor's title and code and can be sent to others. The DQWEB share ULR is <span id="share_url">...</span>).
+	Copies a link to the clipboard that encodes the code editor's title and code and can be sent to others. The DQWEB share ULR is <span id="share_url">...</span>.
 	<h3>Export</h3>Export all your code and layout to JSON. Simply click "EXPORT" + "Ok" for quick timestamped export.
 	<h3>Import</h3>Click "IMPORT" to import (i.e. replace) your code and layout from JSON or keep everything and only import code (it will show up in SHARED).
 	<h2>Advanced</h2>
@@ -92,7 +92,7 @@
 	<ul>
 		<li><b>Internet people:</b> You can do amazing things with modern browsers in 300 lines of code. Thanks for that!</li>
 		<li><b>Coding & copy-pasting:</b> <a href="https://www.linkedin.com/in/dotsch/" target="_blank">András Dőtsch</a></li>
-		<li><b>JS libs:</b> <a href="http://golden-layout.com/" target="_blank">Golden Layout</a>, 
+		<li><b>JS libs:</b> <a href="https://jquery.com/" target="_blank">jQuery</a>, <a href="http://golden-layout.com/" target="_blank">Golden Layout</a>, 
 		<a href="https://codemirror.net/" target="_blank">CodeMirror</a>, 
 		<a href="https://github.com/pieroxy/lz-string" target="_blank">LZ-String</a>,
 		<a href="https://github.com/eligrey/FileSaver.js" target="_blank">FileSaver</a></li>
