--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ﻿<head>
-<title>DQWEB v0.7</title>
+<title>DQWEB</title>
 <link rel="stylesheet" href="cm/lib/codemirror.css"/>
 <link rel="stylesheet" href="cm/theme/eclipse.css"/>
 <script src="dqweb.settings.js"></script>
@@ -511,5 +511,7 @@ window.addEventListener('load',function(){
 		}
 	},1000);
 });
+	
+document.title = "DQWEB v0.7 ("+document.location.host+")";
 </script>
 </body>
